# avi-device-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv
components/avi_embedded/include/: avi_embedded.h
components/avi_transport/: CMakeLists.txt  avi_transport.cpp
components/board_korvo/: CMakeLists.txt  board_korvo.cpp
components/board_korvo/include/: board_korvo.h
components/device_features/: CMakeLists.txt  device_features.cpp
components/led/: led_controller.cpp
components/led/include/: led_controller.h
firmware/: CMakeLists.txt  DEVELOPER_GUIDE.md  README.md  sdkconfig
firmware/components/animations/: CMakeLists.txt  animations.cpp
firmware/components/animations/include/: animations.h  animations_config.h
firmware/components/avi_embedded/: CMakeLists.txt  avi_embedded.c  avi_embedded.h  avi_protocol.c  avi_protocol.h
firmware/components/avi_transport/include/: avi_transport.h
firmware/components/board_korvo/: CMakeLists.txt  board_korvo.cpp
firmware/components/board_korvo/include/: board_korvo.h
firmware/components/device_features/: CMakeLists.txt  device_features.cpp
firmware/components/device_features/include/: device_features.h
firmware/components/led/: CMakeLists.txt  led_controller.cpp
firmware/components/led/include/: led_controller.h
firmware/main/: CMakeLists.txt  device_config.h  firmware.c  idf_component.yml  main.cpp
main/: CMakeLists.txt  device_config.h  main.cpp
tests/mic_test/: CMakeLists.txt
tests/mic_test/main/: CMakeLists.txt  mic_test.c
